# bitgrin

./: .auto-release.sh  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  SECURITY.md  UpstreamCommits.txt  bitgrin.md  package.sh
.hooks/: pre-commit
api/: Cargo.toml
api/src/: auth.rs  client.rs  handlers.rs  lib.rs  rest.rs  router.rs  types.rs
api/src/handlers/: blocks_api.rs  chain_api.rs  peers_api.rs  pool_api.rs  server_api.rs  transactions_api.rs  utils.rs
api/tests/: rest.rs
bats/: create-wallet.bat  finalizing-confirming-transaction.bat  listen-for-http-payments.bat  recieve-payment-from-file.bat  sending-bitgrin-via-file.bat  sending-bitgrin-via-http.bat  view-balance.bat  view-transactions.bat
chain/: Cargo.toml
chain/src/: chain.rs  error.rs  lib.rs  pipe.rs  store.rs  txhashset.rs  types.rs
chain/src/txhashset/: rewindable_kernel_view.rs  txhashset.rs  utxo_view.rs
chain/tests/: data_file_integrity.rs  mine_simple_chain.rs  store_indices.rs  test_coinbase_maturity.rs  test_txhashset.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
core/: Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: block_read.rs  compact_block_read.rs  transaction_read.rs
core/fuzz/src/: main.rs
core/src/: consensus.rs  core.rs  genesis-original.rs  genesis.rs  global.rs  lib.rs  macros.rs  pow.rs  ser.rs
core/src/core/: block.rs  block_sums.rs  committed.rs  compact_block.rs  hash.rs  id.rs  merkle_proof.rs  pmmr.rs  transaction.rs  verifier_cache.rs
core/src/core/pmmr/: backend.rs  pmmr.rs  readonly_pmmr.rs  rewindable_pmmr.rs
core/src/libtx/: aggsig.rs  build.rs  error.rs  mod.rs  proof.rs  reward.rs  slate.rs
core/src/pow/: common.rs  cuckaroo.rs  error.rs  siphash.rs  types.rs
core/tests/: block.rs  common.rs  consensus.rs  core.rs  merkle_proof.rs  pmmr.rs  transaction.rs  vec_backend.rs  verifier_cache.rs
debian/: changelog  control  rules
doc/: build.md  build_ES.md  build_JP.md  build_KR.md  code_structure.md  coinbase_maturity.md  contracts.md  fast-sync.md  fast-sync_ES.md  grin4bitcoiners.md  intro.jp.md  intro.md  intro.ru.md  intro.zh-cn.md  intro_DE.md  intro_DU.md  intro_ES.md  intro_JP.md  intro_NL.md  intro_RU.md  intro_ZH-CN.md  merkle.md  mmr.md  pruning.md  release_instruction.md  state.md  stratum.md  table_of_contents.md  table_of_contents_.md  toc.md
doc/api/: api.md  wallet_owner_api.md
doc/chain/: blocks_and_headers.md  chain_sync.md
doc/dandelion/: dandelion.md  simulation.md
doc/internal/: pool.md
doc/pow/: pow.md
doc/wallet/: tls-setup.md
doc/wallet/design/: design.md  goals.md  wallet-arch.puml
doc/wallet/transaction/: basic-transaction-wf.puml
etc/: Dockerfile  Dockerfile.floonet  crate-release.sh  shell.nix
etc/gen_gen/: Cargo.toml  README.md  _Cargo.toml
keychain/: Cargo.toml
keychain/src/: base58.rs  extkey_bip32.rs  keychain.rs  lib.rs  mnemonic.rs  types.rs
p2p/: Cargo.toml
p2p/fuzz/: Cargo.toml
p2p/fuzz/fuzz_targets/: read_ban_reason.rs  read_get_peer_addrs.rs  read_hand.rs  read_headers.rs  read_locator.rs  read_msg_header.rs  read_peer_addr.rs  read_peer_addrs.rs  read_peer_error.rs  read_ping.rs  read_pong.rs  read_shake.rs  read_sock_addr.rs  read_tx_hashset_archive.rs  read_tx_hashset_request.rs
p2p/src/: conn.rs  handshake.rs  lib.rs  msg.rs  peer.rs  peers.rs  protocol.rs  serv.rs  store.rs  types.rs
p2p/tests/: peer_handshake.rs  ser_deser.rs
payments/: Cargo.toml  test
payments/src/: lib.rs  p2p.rs
payments/tests/: payment_tests.rs
pool/: Cargo.toml
pool/src/: lib.rs  pool.rs  transaction_pool.rs  types.rs
pool/tests/: block_building.rs  block_max_weight.rs  block_reconciliation.rs  coinbase_maturity.rs  common.rs  transaction_pool.rs
servers/: Cargo.toml
servers/src/: bitgrin.rs  common.rs  lib.rs  mining.rs  webwallet.rs
servers/src/bitgrin/: dandelion_monitor.rs  seed.rs  server.rs  sync.rs
servers/src/bitgrin/sync/: body_sync.rs  header_sync.rs  state_sync.rs  syncer.rs
servers/src/common/: adapters.rs  hooks.rs  stats.rs  types.rs
servers/src/grin/: seed.rs
servers/src/mining/: mine_block.rs  stratumserver.rs  test_miner.rs
servers/src/webwallet/: server.rs
servers/tests/: api.rs  dandelion.rs  framework.rs  simulnet.rs  stratum.rs  wallet.rs
store/: Cargo.toml
store/src/: leaf_set.rs  lib.rs  lmdb.rs  pmmr.rs  prune_list.rs  types.rs
store/tests/: lmdb.rs  pmmr.rs  prune_list.rs  test_bitmap.rs  utxo_set_perf.rs
util/: Cargo.toml
util/src/: file.rs  hex.rs  lib.rs  logger.rs  macros.rs  rate_counter.rs  read_write.rs  secp_static.rs  types.rs  zip.rs
util/tests/: file.rs  zip.rs
wallet/: Cargo.toml
wallet/src/: command.rs  controller.rs  display.rs  error.rs  lib.rs  lmdb_wallet.rs  types.rs
wallet/src/adapters/: file.rs  http.rs  keybase.rs  mod.rs  null.rs  slatepool.rs
wallet/src/libwallet/: api.rs  error.rs  internal.rs  mod.rs  slate.rs  types.rs
wallet/src/libwallet/internal/: keys.rs  restore.rs  selection.rs  tx.rs  updater.rs
wallet/src/test_framework/: mod.rs  testclient.rs
wallet/tests/: accounts.rs  check.rs  file.rs  libwallet.rs  repost.rs  restore.rs  self_send.rs  transaction.rs
