[package]
name = "bitgrin"
version = "2.0.0-beta.5"
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.bitgrin", "**/*.bitgrin2"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["api", "chain", "config", "core", "keychain", "p2p", "servers", "store", "util", "pool"]
exclude = ["etc/gen_gen"]

[[bin]]
name = "bitgrin"
path = "src/bin/bitgrin.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.4"
clap = { version = "2.31", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
humansize = "1.1.0"
serde = "1"
serde_json = "1"
log = "0.4"
term = "0.5"
failure = "0.1"
failure_derive = "0.1"
reqwest = "0.9.5"

bitgrin_api = { path = "./api", version = "2.0.0-beta.5" }
bitgrin_config = { path = "./config", version = "2.0.0-beta.5" }
bitgrin_core = { path = "./core", version = "2.0.0-beta.5" }
bitgrin_keychain = { path = "./keychain", version = "2.0.0-beta.5" }
bitgrin_p2p = { path = "./p2p", version = "2.0.0-beta.5" }
bitgrin_servers = { path = "./servers", version = "2.0.0-beta.5" }
bitgrin_util = { path = "./util", version = "2.0.0-beta.5" }
# bitgrin_chain = { path = "./chain", version = "2.0.0-beta.5" }
guard = "0.5.0"
# zip = "0.5.2"
# tempfile = "3.1.0"

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.11", default-features = false, features = ["pancurses-backend"] }
[target.'cfg(windows)'.dependencies.pancurses]
version = "0.16.0"
features = ["win32"]
[target.'cfg(unix)'.dependencies]
cursive = "0.12"


[build-dependencies]
built = "0.3"

[dev-dependencies]
bitgrin_store = { path = "./store", version = "2.0.0-beta.5" }
