[package]
name = "bitgrin_api"
version = "2.0.0-beta.4"
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
hyper = "0.12"
hyper-timeout-connector = "0.1.0"
lazy_static = "1"
regex = "1"
ring = "0.13"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
tokio = "0.1.7"
tokio-core = "0.1.17"
tokio-tcp = "0.1"
tokio-rustls = "0.7"
http = "0.1.5"
hyper-rustls = "0.14"
futures = "0.1.21"
rustls = "0.13"
url = "1.7.0"

bitgrin_core = { path = "../core", version = "2.0.0-beta.4" }
bitgrin_chain = { path = "../chain", version = "2.0.0-beta.4" }
bitgrin_p2p = { path = "../p2p", version = "2.0.0-beta.4" }
bitgrin_pool = { path = "../pool", version = "2.0.0-beta.4" }
bitgrin_store = { path = "../store", version = "2.0.0-beta.4" }
bitgrin_util = { path = "../util", version = "2.0.0-beta.4" }
