[package]
name = "bitgrin_chain"
version = "2.0.0-beta.4"
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
croaring = "0.3.9"
log = "0.4"
serde = "1"
serde_derive = "1"
chrono = "0.4.4"
lru-cache = "0.1"
lazy_static = "1"
regex = "1"
reqwest = "0.9.5"

bitgrin_core = { path = "../core", version = "2.0.0-beta.4" }
bitgrin_keychain = { path = "../keychain", version = "2.0.0-beta.4" }
bitgrin_store = { path = "../store", version = "2.0.0-beta.4" }
bitgrin_util = { path = "../util", version = "2.0.0-beta.4" }

[dev-dependencies]
env_logger = "0.5"
rand = "0.6"
