[package]
name = "bitgrin_config"
version = "1.0.0"
authors = ["BitGrin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for bitgrin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

bitgrin_core = { path = "../core", version = "1.0.0" }
bitgrin_servers = { path = "../servers", version = "1.0.0" }
bitgrin_p2p = { path = "../p2p", version = "1.0.7" }
bitgrin_util = { path = "../util", version = "1.0.0" }
bitgrin_wallet = { path = "../wallet", version = "1.0.0" }

[dev-dependencies]
pretty_assertions = "0.5.1"
