[package]
name = "bitgrin_config"
version = "2.0.0-beta.3"
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

bitgrin_core = { path = "../core", version = "2.0.0-beta.3" }
bitgrin_servers = { path = "../servers", version = "2.0.0-beta.3" }
bitgrin_p2p = { path = "../p2p", version = "2.0.0-beta.3" }
bitgrin_util = { path = "../util", version = "2.0.0-beta.3" }

[dev-dependencies]
pretty_assertions = "0.5.1"
