[package]
name = "bitgrin_p2p"
version = "1.0.0"
authors = ["BitGrin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for bitgrin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
bytes = "0.4"
enum_primitive = "0.1"
lmdb-zero = "0.4.4"
net2 = "0.2"
num = "0.1"
rand = "0.5"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = { version = "0.4.4", features = ["serde"] }

bitgrin_core = { path = "../core", version = "1.0.0" }
bitgrin_store = { path = "../store", version = "1.0.0" }
bitgrin_util = { path = "../util", version = "1.0.0" }

[dev-dependencies]
bitgrin_pool = { path = "../pool", version = "1.0.0" }
