[package]
name = "bitgrin_p2p"
version = "2.0.5"
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
bytes = "0.4"
enum_primitive = "0.1"
net2 = "0.2"
num = "0.1"
rand = "0.6"
serde = "1"
serde_derive = "1"
tempfile = "3.0.5"
log = "0.4"
chrono = { version = "0.4.4", features = ["serde"] }

bitgrin_core = { path = "../core", version = "2.0.5" }
bitgrin_store = { path = "../store", version = "2.0.5" }
bitgrin_util = { path = "../util", version = "2.0.5" }
bitgrin_chain = { path = "../chain", version = "2.0.5" }

[dev-dependencies]
bitgrin_pool = { path = "../pool", version = "2.0.5" }
