[package]
name = "bitgrin_pool"
version = "1.0.0"
authors = ["BitGrin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for bitgrin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.5"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = "0.4.4"
failure = "0.1"
failure_derive = "0.1"

bitgrin_core = { path = "../core", version = "1.0.0" }
bitgrin_keychain = { path = "../keychain", version = "1.0.0" }
bitgrin_store = { path = "../store", version = "1.0.0" }
bitgrin_util = { path = "../util", version = "1.0.0" }

[dev-dependencies]
bitgrin_chain = { path = "../chain", version = "1.0.0" }
