[package]
name = "bitgrin_servers"
version = "1.0.0"
authors = ["BitGrin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.12"
futures = "0.1"
http = "0.1"
hyper-staticfile = "0.3"
itertools = "0.7"
lmdb-zero = "0.4.4"
rand = "0.5"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.4"
bufstream = "~0.1"
jsonrpc-core = "~8.0"

bitgrin_api = { path = "../api", version = "1.0.0" }
bitgrin_chain = { path = "../chain", version = "1.0.0" }
bitgrin_core = { path = "../core", version = "1.0.0" }
bitgrin_keychain = { path = "../keychain", version = "1.0.0" }
bitgrin_p2p = { path = "../p2p", version = "1.0.0" }
bitgrin_pool = { path = "../pool", version = "1.0.0" }
bitgrin_store = { path = "../store", version = "1.0.0" }
bitgrin_util = { path = "../util", version = "1.0.0" }
bitgrin_wallet = { path = "../wallet", version = "1.0.0" }

[dev-dependencies]
blake2-rfc = "0.2"
