[package]
name = "bitgrin_servers"
version = "2.0.1"
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/bitgrin/bitgrin"
keywords = [ "crypto", "bitgrin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.12"
hyper-rustls = "0.14"
fs2 = "0.4"
futures = "0.1"
http = "0.1"
itertools = "0.7"
lmdb-zero = "0.4.4"
rand = "0.6"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.4"
tokio =  "0.1.11"

bitgrin_api = { path = "../api", version = "2.0.1" }
bitgrin_chain = { path = "../chain", version = "2.0.1" }
bitgrin_core = { path = "../core", version = "2.0.1" }
bitgrin_keychain = { path = "../keychain", version = "2.0.1" }
bitgrin_p2p = { path = "../p2p", version = "2.0.1" }
bitgrin_pool = { path = "../pool", version = "2.0.1" }
bitgrin_store = { path = "../store", version = "2.0.1" }
bitgrin_util = { path = "../util", version = "2.0.1" }
